# C

./: .gitignore  CMakeLists.txt  prime_num.c
dma/: compare.c  find_largests.c  sum.c
file_handling/: employee.txt  formatted_data.c  mutiple_data.c  read_mode.c  student.txt  text.txt  write_mode.c  write_numbers.c  write_prime_numbers.c
patterns/: bottomTop.c
practice/: pattern.c
recursive/: factorial.c  fibo.c
sortings/: bubble_sort.c  selection_sort.c
strucuture/: dma_struct.c  student.c
